gospel/tests/negative/t4.mli

(*@ predicate pred (x:int) = x *)

(* ERROR: the term in predicates must have type prop or bool *)
